--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-source-googlemaps-geocoding": "^1.0.0",
     "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.14",
+    "google-map-react": "^2.1.3",
     "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
