--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "formik": "^2.1.5",
     "gatsby": "^2.24.53",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-fonts": "^1.0.1",
