--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-source-googlemaps-geocoding": "^1.0.0",
+    "gatsby-source-podcast-rss-feed": "^0.1.2",
     "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.14",
     "google-map-react": "^2.1.3",
