--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-pdf": "^5.0.0",
     "use-scroll-lock": "^1.0.0"
   },
   "devDependencies": {
