--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-h5-audio-player": "^3.4.1",
     "react-helmet": "^5.2.1",
     "react-pdf": "^5.0.0",
     "use-scroll-lock": "^1.0.0"
